# CppPersonalLib

./: .gitignore  CMakeLists.txt  README.md  buildall.sh  cleanall.sh  runalltests.sh  setup.sh
cmake/: AddGoogleTest.cmake  AddLocalLibraries.cmake
include/TechnicalLib/: Dictionary.h  List.h
src/: CMakeLists.txt
src/TestConsole/: main.cpp
tests/: CMakeLists.txt
tests/TechnicalLibTest/: List_test.cpp
